--- a/adholc_playbooks/inventory.ini
+++ b/adholc_playbooks/inventory.ini
@@ -1,2 +1,8 @@
-[aws]
+[aws_ubuntu]
 ubuntu@54.172.189.220
+
+[aws_ubuntu:vars]
+deploy_dir=/tmp
+
+[aws_ec2]
+ubuntu@54.172.189.221 deploy_dir=/opt
